[gd_scene load_steps=3 format=3 uid="uid://o7wg62ollctd"]

[ext_resource type="Script" uid="uid://bdnwg40t4s00d" path="res://class_selection.gd" id="1_d5yl1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swaal"]
bg_color = Color(0.265948, 0.265947, 0.272575, 0.94902)

[node name="ClassSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d5yl1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -224.0
offset_right = 416.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClassListPanel" type="Panel" parent="CanvasLayer/Panel/Control"]
layout_mode = 0
offset_left = 4.0
offset_top = -8.0
offset_right = 260.0
offset_bottom = 440.0

[node name="ClassListContainer" type="VBoxContainer" parent="CanvasLayer/Panel/Control"]
layout_mode = 0
offset_left = 4.0
offset_top = -8.0
offset_right = 260.0
offset_bottom = 440.0
theme_override_constants/separation = 10

[node name="Warrior" type="Button" parent="CanvasLayer/Panel/Control/ClassListContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Warrior"

[node name="Mage" type="Button" parent="CanvasLayer/Panel/Control/ClassListContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Mage"

[node name="Archer" type="Button" parent="CanvasLayer/Panel/Control/ClassListContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Archer"

[node name="ClassInfoPanel" type="Panel" parent="CanvasLayer/Panel/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -232.0
offset_right = 356.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_swaal")

[node name="ClassInfo" type="Label" parent="CanvasLayer/Panel/Control/ClassInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="PlayerName" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[connection signal="mouse_entered" from="CanvasLayer/Panel/Control/ClassListContainer/Warrior" to="." method="_on_warrior_mouse_entered"]
